data/diff_tests/wasmtime/call_indirect_IncorrectHandlingofControlFlowAcrossModuleBoundaries_4713.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\8f\80\80\80\00\01\03\65\6e\76\07\6d\79"
    "\5f\66\75\6e\63\00\00\03\82\80\80\80\00\01\00\04"
    "\84\80\80\80\00\01\70\00\01\0a\8d\80\80\80\00\01"
    "\87\80\80\80\00\00\41\01\11\00\00\0b"
  )
""
)